# mspm0_cmake_empty

./: CMakeLists.txt  README.md  openocd.cfg
Core/Src/: main.c
